--- a/.github/workflows/migrate-prod.yml
+++ b/.github/workflows/migrate-prod.yml
@@ -1,13 +1,7 @@
-mkdir -Force .github\workflows
-Set-Content -Path .github\workflows\migrate-prod.yml -Value @"
-name: Prisma Migrate Deploy (Prod)
-on:
-  workflow_dispatch: {}
-  # optional: auto-run when migrations change
-  # push:
-  #   branches: [ main ]
-  #   paths:
-  #     - 'prisma/migrations/**'
+name: prisma-migrate-prod
+"on":
+  workflow_dispatch:
+
 jobs:
   migrate:
     runs-on: ubuntu-latest
@@ -16,13 +10,9 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 20
       - run: npm ci
-      - name: Deploy Prisma migrations to PROD
+      - name: Deploy Prisma migrations
         run: npx prisma migrate deploy
         env:
           DATABASE_URL: ${{ secrets.NEON_PROD_MIGRATOR_URL }}
-"@
-git add .github/workflows/migrate-prod.yml
-git commit -m "ci: add Prisma migrate deploy workflow (prod)"
-git push origin main
