--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "type": "module",
   "main": "dist/server.js",
-  "engines": { "node": "20.x" },
+  "engines": {
+    "node": "20.x"
+  },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p .",
@@ -23,6 +25,7 @@
     "fastify": "^4.28.1"
   },
   "devDependencies": {
+    "@types/node": "^24.3.1",
     "dotenv-cli": "^7.4.2",
     "prisma": "^6.16.1",
     "tsx": "^4.19.2",
