--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
   },
   "dependencies": {
     "@fastify/cors": "^9.0.1",
+    "@fastify/helmet": "^13.0.1",
     "@prisma/client": "^6.16.1",
-    "fastify": "^4.28.1"
+    "fastify": "^4.28.1",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
