--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@types/node": "^24.3.1",
     "dotenv-cli": "^7.4.2",
     "prisma": "^6.16.1",
+    "ts-node": "^10.9.2",
     "tsx": "^4.19.2",
-    "typescript": "^5.5.4"
+    "typescript": "^5.9.2"
   }
 }
