--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "tsx watch src/server.ts",
     "build": "tsc -p .",
     "start": "node dist/server.js",
+    "start:render": "bash -lc \"DATABASE_URL=$MIGRATE_DATABASE_URL npx prisma migrate deploy && npm run start\"",
     "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate:dev": "dotenv -e .env.dev.migrate -- prisma migrate dev",
