remove stuff from .env

--- a/.env
+++ b/.env
@@ -1,15 +1,4 @@
-# --- Shared (local + prod) ---
-# Marks the current environment
-BHQ_ENV=dev
-
-# Local API port (ignored in Render)
+# breederhq-api/.env
+BHQ_ENV=local
 PORT=6001
-
-# --- Local development: runtime only ---
-DATABASE_URL=postgresql://bhq_app:npg_oXEFQ51ijPHa@ep-empty-scene-ae29f2je.c-2.us-east-2.aws.neon.tech/bhq_dev?sslmode=require
-
-# Admin token for protected endpoints
-ADMIN_TOKEN=npy7Ynfo-*a!X.GCKAMhUJB7oWoBWscMEtqq*Kf_CpNqNFHKgsFVhrRgE3VLJnWH
-
-# Prisma’s WebAssembly client engine in local dev
 PRISMA_CLIENT_ENGINE_TYPE=wasm
