Sync local work to dev (2025-10-07)

--- a/.env
+++ b/.env
@@ -2,3 +2,10 @@
 BHQ_ENV=local
 PORT=6001
 PRISMA_CLIENT_ENGINE_TYPE=wasm
+WEB_ORIGIN=https://app.breederhq.com
+COOKIE_NAME=bhq_s
+SESSION_COOKIE_DOMAIN=.breederhq.com
+SESSION_TTL_SECONDS=1209600
+COOKIE_SECRET=<32+ random bytes>
+ALLOWED_ORIGINS=https://app.breederhq.com
+API_ORIGIN=https://api.breederhq.com
