--- a/package.json
+++ b/package.json
@@ -8,32 +8,45 @@
     "node": "20.x"
   },
   "scripts": {
-    "dev": "tsx watch src/server.ts",
+    "dev": "dotenv -e .env.dev -- tsx watch src/server.ts",
     "build": "tsc -p .",
     "start": "node dist/server.js",
-    "start:render": "bash -lc \"DATABASE_URL=$MIGRATE_DATABASE_URL npx prisma migrate deploy && npm run start\"",
     "postinstall": "prisma generate",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate:dev": "dotenv -e .env.dev.migrate -- prisma migrate dev",
-    "prisma:migrate:prod": "dotenv -e .env.prod.migrate -- prisma migrate deploy",
-    "prisma:status:dev": "dotenv -e .env.dev.migrate -- prisma migrate status",
-    "prisma:status:prod": "dotenv -e .env.prod.migrate -- prisma migrate status",
-    "prisma:studio": "prisma studio",
-    "dev:env": "dotenv -e .env.dev -- tsx watch src/server.ts"
+    "db:studio": "dotenv -e .env.studio -- prisma studio --schema=prisma/schema.prisma",
+    "db:pull": "dotenv -e .env.studio -- prisma db pull --schema=prisma/schema.prisma",
+    "db:gen":     "dotenv -e .env.dev.migrate -- prisma generate --schema=prisma/schema.prisma",
+    "db:resolve": "dotenv -e .env.dev.migrate -- prisma migrate resolve --schema=prisma/schema.prisma",
+    "db:mig:dev": "dotenv -e .env.dev.migrate -- prisma migrate dev --schema=prisma/schema.prisma",
+    "db:mig:reset": "dotenv -e .env.dev.migrate -- prisma migrate reset --force --schema=prisma/schema.prisma",
+    "db:mig:status": "dotenv -e .env.dev.migrate -- prisma migrate status --schema=prisma/schema.prisma",
+    "db:mig:deploy": "dotenv -e .env.prod.migrate -- prisma migrate deploy --schema=prisma/schema.prisma",
+    "db:seed": "dotenv -e .env -- prisma db seed --schema=prisma/schema.prisma",
+    "db:seed:dev": "dotenv -e .env.dev -- prisma db seed --schema=prisma/schema.prisma",
+    "db:reset:dev": "dotenv -e .env.dev -- prisma migrate reset --force --skip-generate --skip-seed --schema=prisma/schema.prisma && dotenv -e .env.dev -- prisma db seed --schema=prisma/schema.prisma",
+    "prisma:generate": "prisma generate --schema=prisma/schema.prisma",
+    "prisma:migrate": "prisma migrate dev --schema=prisma/schema.prisma",
+    "prisma:seed": "prisma db seed --schema=prisma/schema.prisma"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed/seed-godmode.ts"
   },
   "dependencies": {
+    "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^10.1.0",
     "@fastify/helmet": "^13.0.1",
-    "@prisma/client": "^6.16.1",
+    "@fastify/rate-limit": "^10.3.0",
+    "@prisma/client": "^6.17.0",
+    "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
-    "dotenv-cli": "^7.4.2",
-    "prisma": "^6.16.1",
+    "cross-env": "^10.1.0",
+    "dotenv-cli": "^7.4.4",
+    "prisma": "^6.17.0",
     "ts-node": "^10.9.2",
-    "tsx": "^4.19.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.9.2"
   }
 }
