--- a/package.json
+++ b/package.json
@@ -14,37 +14,34 @@
     "postinstall": "prisma generate",
     "db:studio": "dotenv -e .env.studio -- prisma studio --schema=prisma/schema.prisma",
     "db:pull": "dotenv -e .env.studio -- prisma db pull --schema=prisma/schema.prisma",
-    "db:gen":     "dotenv -e .env.dev.migrate -- prisma generate --schema=prisma/schema.prisma",
+    "db:gen": "dotenv -e .env.dev.migrate -- prisma generate --schema=prisma/schema.prisma",
     "db:resolve": "dotenv -e .env.dev.migrate -- prisma migrate resolve --schema=prisma/schema.prisma",
     "db:mig:dev": "dotenv -e .env.dev.migrate -- prisma migrate dev --schema=prisma/schema.prisma",
     "db:mig:reset": "dotenv -e .env.dev.migrate -- prisma migrate reset --force --schema=prisma/schema.prisma",
     "db:mig:status": "dotenv -e .env.dev.migrate -- prisma migrate status --schema=prisma/schema.prisma",
     "db:mig:deploy": "dotenv -e .env.prod.migrate -- prisma migrate deploy --schema=prisma/schema.prisma",
     "db:seed": "dotenv -e .env -- prisma db seed --schema=prisma/schema.prisma",
+    "seed:breeds": "dotenv -e .env.dev.migrate -- tsx prisma/seed/seed-breeds-json.ts",
     "db:seed:dev": "dotenv -e .env.dev -- prisma db seed --schema=prisma/schema.prisma",
     "db:reset:dev": "dotenv -e .env.dev -- prisma migrate reset --force --skip-generate --skip-seed --schema=prisma/schema.prisma && dotenv -e .env.dev -- prisma db seed --schema=prisma/schema.prisma",
-    "prisma:generate": "prisma generate --schema=prisma/schema.prisma",
-    "prisma:migrate": "prisma migrate dev --schema=prisma/schema.prisma",
-    "prisma:seed": "prisma db seed --schema=prisma/schema.prisma"
-  },
-  "prisma": {
-    "seed": "tsx prisma/seed/seed-godmode.ts"
+    "prisma:generate": "prisma generate --schema=prisma/schema.prisma"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^10.1.0",
     "@fastify/helmet": "^13.0.1",
     "@fastify/rate-limit": "^10.3.0",
-    "@prisma/client": "^6.17.0",
+    "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
+    "slugify": "^1.6.6",
     "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
     "cross-env": "^10.1.0",
     "dotenv-cli": "^7.4.4",
-    "prisma": "^6.17.0",
+    "prisma": "^6.17.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2"
