--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "db:mig:deploy": "dotenv -e .env.prod.migrate -- prisma migrate deploy --schema=prisma/schema.prisma",
     "db:seed": "dotenv -e .env -- prisma db seed --schema=prisma/schema.prisma",
     "seed:breeds": "dotenv -e .env.dev.migrate -- tsx prisma/seed/seed-breeds-json.ts",
+    "seed:registries": "dotenv -e .env.dev.migrate -- tsx prisma/seed/seed-registries.ts",
     "db:seed:dev": "dotenv -e .env.dev -- prisma db seed --schema=prisma/schema.prisma",
     "db:reset:dev": "dotenv -e .env.dev -- prisma migrate reset --force --skip-generate --skip-seed --schema=prisma/schema.prisma && dotenv -e .env.dev -- prisma db seed --schema=prisma/schema.prisma",
     "prisma:generate": "prisma generate --schema=prisma/schema.prisma"
@@ -34,6 +35,7 @@
     "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
+    "sharp": "^0.34.5",
     "slugify": "^1.6.6",
     "zod": "^4.1.8"
   },
