Prod baseline: clean build and dev parity

--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-# breederhq-api/.env
-BHQ_ENV=local
-PORT=6001
-PRISMA_CLIENT_ENGINE_TYPE=wasm
+DATABASE_URL="postgresql://bhq_migrator:YOURPASS@YOURHOST/bhq_dev?sslmode=require&channel_binding=require"
