--- a/.gitignore
+++ b/.gitignore
@@ -44,15 +44,11 @@ Thumbs.db
 
 # Other files
 *repo-structure*
+.claude/settings.local.json
+
 # route tests (excluded)
 src/routes/__tests__/
-
-
 prisma/migrations.bak/
-
-
 tmp/route-backups/
-
-
 prisma/schema.backup.prisma
 
