--- a/.gitignore
+++ b/.gitignore
@@ -44,15 +44,13 @@ Thumbs.db
 
 # Other files
 *repo-structure*
+CLAUDE.md
+.claudeignore
+.claude/
+.eslintcache
+
 # route tests (excluded)
 src/routes/__tests__/
-
-
 prisma/migrations.bak/
-
-
 tmp/route-backups/
-
-
 prisma/schema.backup.prisma
-
