chore(prisma): update schema and add species seed data

--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
     "build": "tsc -p .",
     "start": "node dist/server.js",
     "start:render": "node dist/server.js",
-    "db:dev": "npx dotenv -e .env.dev -- prisma db push --schema=prisma/schema.prisma",
-    "db:dev:force": "npx dotenv -e .env.dev -- prisma db push --accept-data-loss --schema=prisma/schema.prisma",
-    "db:prod": "npx dotenv -e .env.prod.migrate -- prisma migrate deploy --schema=prisma/schema.prisma",
-    "db:prod:status": "npx dotenv -e .env.prod.migrate -- prisma migrate status --schema=prisma/schema.prisma",
-    "db:studio": "npx dotenv -e .env.studio -- prisma studio --schema=prisma/schema.prisma",
-    "db:pull": "npx dotenv -e .env.studio -- prisma db pull --schema=prisma/schema.prisma",
+    "db:dev": "npx dotenv -e .env.dev.migrate --override -- prisma db push --schema=prisma/schema.prisma",
+    "db:dev:force": "npx dotenv -e .env.dev.migrate --override -- prisma db push --accept-data-loss --schema=prisma/schema.prisma",
+    "db:prod": "npx dotenv -e .env.prod.migrate --override -- prisma migrate deploy --schema=prisma/schema.prisma",
+    "db:prod:status": "npx dotenv -e .env.prod.migrate --override -- prisma migrate status --schema=prisma/schema.prisma",
+    "db:studio": "npx dotenv -e .env.studio --override -- prisma studio --schema=prisma/schema.prisma",
+    "db:pull": "npx dotenv -e .env.studio --override -- prisma db pull --schema=prisma/schema.prisma",
     "db:gen": "prisma generate --schema=prisma/schema.prisma",
     "postinstall": "prisma generate --schema=prisma/schema.prisma"
   },
