refactor: use .env.dev for prototype DB scripts and remove .env.proto dependency
Package scripts:
- Update db:proto:push and db:proto:reset to load from .env.dev
- Keep dotenv + prisma-guard.js safety chain intact

Guard rules (scripts/prisma-guard.js):
- db:proto:* scripts require DATABASE_URL containing 'bhq_proto'
- Explicitly block db:proto:* against bhq_dev and bhq_prod
- Improve error messages to guide users to set DATABASE_URL in .env.dev locally
- Do not print full DATABASE_URL in errors (only database type)
- Continue absolute bhq_prod block for all operations
- Continue blocking prisma migrate and db pull in prototype mode

Documentation updates:
- PROTOTYPE_MODE.md: prototype scripts use .env.dev, set DATABASE_URL locally (never commit)
- PROTOTYPE_DB_WORKFLOW.md: updated all .env.proto references to .env.dev workflow
- CLAUDE_HEADER_PROTOTYPE_MODE.md: clarified .env.dev is the env file

Cleanup:
- Removed .env.proto file (no longer needed)
- All .env.proto references removed from docs and scripts

To use prototype mode:
1. Set DATABASE_URL in .env.dev to bhq_proto connection string
2. Keep this change local (do not commit to git)
3. Run npm run db:proto:push or db:proto:reset
4. Guards enforce bhq_proto database requirement

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "db:studio": "npx dotenv -e .env.studio -- prisma studio --schema=prisma/schema.prisma",
     "db:pull": "npx dotenv -e .env.studio -- prisma db pull --schema=prisma/schema.prisma",
     "db:gen": "prisma generate --schema=prisma/schema.prisma",
-    "db:proto:reset": "npx dotenv -e .env.proto -- node scripts/prisma-guard.js -- prisma db push --force-reset --accept-data-loss --schema=prisma/schema.prisma && prisma generate --schema=prisma/schema.prisma",
-    "db:proto:push": "npx dotenv -e .env.proto -- node scripts/prisma-guard.js -- prisma db push --schema=prisma/schema.prisma && prisma generate --schema=prisma/schema.prisma",
+    "db:proto:reset": "npx dotenv -e .env.dev -- node scripts/prisma-guard.js -- prisma db push --force-reset --accept-data-loss --schema=prisma/schema.prisma && prisma generate --schema=prisma/schema.prisma",
+    "db:proto:push": "npx dotenv -e .env.dev -- node scripts/prisma-guard.js -- prisma db push --schema=prisma/schema.prisma && prisma generate --schema=prisma/schema.prisma",
     "ci:prototype:check": "node scripts/check-prototype-mode.js",
     "postinstall": "prisma generate --schema=prisma/schema.prisma"
   },
