chore(marketing): remove shadow db usage and fix env hygiene

--- a/.env.example
+++ b/.env.example
@@ -2,39 +2,10 @@
 # BreederHQ Environment Config Example #
 ########################################
 
-# --- Shared (local + prod) ---
-# Marks the current environment
-BHQ_ENV=dev
+# Database connection
+DATABASE_URL=
 
-# Admin token for protected endpoints
-# (staging-only or until you wire real auth)
-ADMIN_TOKEN=replace-with-strong-random-token
-
-
-# --- Local development: migrations ---
-# Use bhq_migrator role + dev branch for Prisma migrations
-# Requires a dedicated shadow database in the dev branch
-# Run: npx prisma migrate dev
-DATABASE_URL="postgresql://bhq_migrator:<MIGRATOR_PASSWORD>@<DEV_HOST>/<DEV_DB>?sslmode=require"
-SHADOW_DATABASE_URL="postgresql://bhq_migrator:<MIGRATOR_PASSWORD>@<DEV_HOST>/bhq_shadow?sslmode=require"
-
-# Local API port (ignored in Render)
-PORT=7001
-
-
-# --- Local development: runtime ---
-# After migrations, switch to bhq_app role for day-to-day dev
-# Your API runs against the same dev DB, but safer role
-# Uncomment these lines when running the API locally:
-# DATABASE_URL="postgresql://bhq_app:<APP_PASSWORD>@<DEV_HOST>/<DEV_DB>?sslmode=require"
-# SHADOW_DATABASE_URL=""
-
-
-# --- Production (Render) ---
-# Use bhq_app or bhq_writer role on the production branch
-# No shadow DB in production
-# Render sets PORT automatically
-# Uncomment these lines in your Render env vars:
-# DATABASE_URL="postgresql://bhq_app:<APP_PASSWORD>@<PROD_HOST>/<PROD_DB>?sslmode=require"
-# SHADOW_DATABASE_URL=""
-# BHQ_ENV=production
+# Email (Resend)
+RESEND_API_KEY=
+RESEND_FROM_EMAIL=
+RESEND_FROM_NAME=
