fix(marketplace): register public routes under /api/v1/public and alias legacy prefix
- Register marketplace routes at /api/v1/public/marketplace/* (authoritative)
- Maintain backward compatibility with /api/v1/marketplace/* (legacy alias)
- Both prefixes gated by MARKETPLACE_PUBLIC_ENABLED feature flag
- Add verification script: scripts/verify-public-marketplace-routes.ps1
- Add npm script: npm run script:verify-routes
- Add production enablement documentation: docs/marketplace-public.md

Resolves frontend API client mismatch where apps/marketplace expects
/api/v1/public/marketplace/* but backend was only serving /api/v1/marketplace/*

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "bootstrap:admin:prod": "npx dotenv -e .env.prod -- node scripts/bootstrap-global-admin-access.mjs",
     "script:enable-public-program": "node scripts/enable-public-program.mjs",
     "script:verify-public-programs": "powershell -File scripts/verify-public-programs.ps1",
+    "script:verify-routes": "powershell -File scripts/verify-public-marketplace-routes.ps1",
     "postinstall": "prisma generate --schema=prisma/schema.prisma"
   },
   "dependencies": {
