--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "script:enable-public-program": "node scripts/enable-public-program.mjs",
     "script:verify-public-programs": "powershell -File scripts/verify-public-programs.ps1",
     "script:verify-routes": "powershell -File scripts/verify-public-marketplace-routes.ps1",
-    "postinstall": "prisma generate --schema=prisma/schema.prisma"
+    "postinstall": "prisma generate --schema=prisma/schema.prisma",
+    "db:push": "echo \"🚫 db push is FORBIDDEN - Use: npm run db:dev:migrate\" && exit 1",
+    "db:dev:push": "echo \"🚫 db push is FORBIDDEN - Use: npm run db:dev:migrate\" && exit 1",
+    "db:prod:push": "echo \"🚫 db push is FORBIDDEN - Use: npm run db:prod:deploy\" && exit 1"
   },
   "dependencies": {
     "@fastify/cookie": "^11.0.2",
