lots of API related fixes additions

--- a/package.json
+++ b/package.json
@@ -29,6 +29,11 @@
     "db:dev:deploy": "node scripts/run-with-env.js .env.dev.migrate prisma migrate deploy --schema=prisma/schema.prisma",
     "db:dev:integrity": "node scripts/run-with-env.js .env.dev.migrate node scripts/db/check-migration-integrity.mjs",
     "db:dev:seed:users": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-test-users.ts",
+    "db:dev:seed:traits": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-trait-definitions.ts",
+    "db:dev:seed:tattooine": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-tattooine-contacts.ts",
+    "db:dev:seed": "npm run db:dev:seed:traits && npm run db:dev:seed:users",
+    "db:dev:reset": "npm run db:dev:deploy && npm run db:dev:seed",
+    "db:prod:seed:traits": "node scripts/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-trait-definitions.ts",
     "db:prod:status": "node scripts/run-with-env.js .env.prod.migrate prisma migrate status --schema=prisma/schema.prisma",
     "db:prod:deploy": "node scripts/run-with-env.js .env.prod.migrate prisma migrate deploy --schema=prisma/schema.prisma",
     "db:prod:validate": "node scripts/run-with-env.js .env.prod.migrate tsx scripts/db/v2/validate-post-import.ts",
