--- a/package.json
+++ b/package.json
@@ -31,8 +31,11 @@
     "db:dev:seed:users": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-test-users.ts",
     "db:dev:seed:traits": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-trait-definitions.ts",
     "db:dev:seed:tattooine": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-tattooine-contacts.ts",
-    "db:dev:seed": "npm run db:dev:seed:traits && npm run db:dev:seed:users",
+    "db:dev:seed:products": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-subscription-products.ts",
+    "db:dev:seed": "npm run db:dev:seed:traits && npm run db:dev:seed:users && npm run db:dev:seed:products",
     "db:dev:reset": "npm run db:dev:deploy && npm run db:dev:seed",
+    "test:quota": "node scripts/run-with-env.js .env.dev.migrate npx tsx scripts/test-quota-enforcement.ts",
+    "test:usage": "node scripts/run-with-env.js .env.dev.migrate npx tsx scripts/test-usage-api.ts",
     "db:prod:seed:traits": "node scripts/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-trait-definitions.ts",
     "db:prod:status": "node scripts/run-with-env.js .env.prod.migrate prisma migrate status --schema=prisma/schema.prisma",
     "db:prod:deploy": "node scripts/run-with-env.js .env.prod.migrate prisma migrate deploy --schema=prisma/schema.prisma",
