--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,10 @@ DATABASE_URL=
 RESEND_API_KEY=
 RESEND_FROM_EMAIL=
 RESEND_FROM_NAME=
+
+# Application URL (for emails)
+APP_URL=http://localhost:5173
+
+# Stripe Billing
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
