more back end updates

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,6 +9,7 @@ prisma/schema.prisma text eol=lf
 *.json text eol=lf
 *.sql text eol=lf
 *.toml text eol=lf
+*.md text eol=lf
 
 # Keep binaries untouched
 *.png binary
