major enhancements to genetics

--- a/.env.example
+++ b/.env.example
@@ -23,12 +23,40 @@ COOKIE_SECRET=
 # Database connection
 DATABASE_URL=
 
+# ────────────────────────────────────────────────────────────────────────────
 # Email (Resend)
+# ────────────────────────────────────────────────────────────────────────────
+# Get your API key from https://resend.com/api-keys
 RESEND_API_KEY=
-RESEND_FROM_EMAIL=
-RESEND_FROM_NAME=
 
-# Application URL (for emails)
+# From address (must be verified domain in Resend for production)
+# Development: Use Resend's test domain: onboarding@resend.dev
+# Production: Use your verified domain: noreply@breederhq.com
+RESEND_FROM_EMAIL=onboarding@resend.dev
+RESEND_FROM_NAME=BreederHQ
+
+# ────────────────────────────────────────────────────────────────────────────
+# Email Development Safeguards
+# ────────────────────────────────────────────────────────────────────────────
+# These settings ONLY apply when NODE_ENV != "production"
+# They prevent accidentally emailing real users during development.
+
+# Option 1: Redirect all emails to a single test address
+# All emails will be sent here with "[DEV: original@email.com]" in subject
+# EMAIL_DEV_REDIRECT=your-dev-email@gmail.com
+
+# Option 2: Log only mode - emails are logged but never sent
+# Set to "true" to enable (useful for local testing without Resend)
+# EMAIL_DEV_LOG_ONLY=true
+
+# Option 3: Allow specific domains through (comma-separated)
+# Emails to these domains will be sent normally, others will be redirected/blocked
+# EMAIL_DEV_ALLOWED_DOMAINS=yourdomain.com,test.breederhq.com
+
+# ────────────────────────────────────────────────────────────────────────────
+# Application URLs
+# ────────────────────────────────────────────────────────────────────────────
+# Used in email templates for links back to the app
 APP_URL=http://localhost:5173
 
 # Stripe Billing
