so much amazing stuff - bloodlines, genetics lab, dashboard!

--- a/package.json
+++ b/package.json
@@ -33,10 +33,14 @@
     "db:dev:seed:traits": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-trait-definitions.ts",
     "db:dev:seed:tattooine": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-tattooine-contacts.ts",
     "db:dev:seed:products": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-subscription-products.ts",
+    "db:dev:seed:genetics": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-genetics-test-animals.ts",
+    "db:dev:seed:titles": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-title-definitions.ts",
+    "db:dev:seed:competitions": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-titles-competitions.ts",
     "db:dev:seed": "npm run db:dev:seed:traits && npm run db:dev:seed:users && npm run db:dev:seed:products",
     "db:dev:reset": "npm run db:dev:deploy && npm run db:dev:seed",
     "test:quota": "node scripts/run-with-env.js .env.dev.migrate npx tsx scripts/test-quota-enforcement.ts",
     "test:usage": "node scripts/run-with-env.js .env.dev.migrate npx tsx scripts/test-usage-api.ts",
+    "test:genetics": "node scripts/run-with-env.js .env.dev.migrate npx tsx scripts/test-genetics-lab.ts",
     "db:prod:seed:traits": "node scripts/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-trait-definitions.ts",
     "db:prod:status": "node scripts/run-with-env.js .env.prod.migrate prisma migrate status --schema=prisma/schema.prisma",
     "db:prod:deploy": "node scripts/run-with-env.js .env.prod.migrate prisma migrate deploy --schema=prisma/schema.prisma",
