MASSIVE CHANGES AND UPDATES

--- a/.env.example
+++ b/.env.example
@@ -31,9 +31,17 @@ RESEND_API_KEY=
 
 # From address (must be verified domain in Resend for production)
 # Development: Use Resend's test domain: onboarding@resend.dev
-# Production: Use your verified domain: noreply@breederhq.com
+# Production: Use your verified domain: noreply@mail.breederhq.com
 RESEND_FROM_EMAIL=onboarding@resend.dev
 RESEND_FROM_NAME=BreederHQ
+
+# Inbound email configuration
+# Domain for receiving emails (must match Resend verified domain)
+RESEND_INBOUND_DOMAIN=mail.breederhq.com
+# Webhook signing secret (from Resend webhook setup)
+RESEND_WEBHOOK_SECRET=
+# HMAC secret for signing reply-to addresses (generate with: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))")
+INBOUND_EMAIL_HMAC_SECRET=
 
 # ────────────────────────────────────────────────────────────────────────────
 # Email Development Safeguards
