--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "@fastify/cors": "^10.1.0",
     "@fastify/helmet": "^13.0.1",
     "@fastify/rate-limit": "^10.3.0",
+    "@fastify/websocket": "^11.2.0",
     "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
@@ -90,6 +91,7 @@
   },
   "devDependencies": {
     "@types/node": "^24.3.1",
+    "@types/ws": "^8.18.1",
     "cross-env": "^10.1.0",
     "dotenv-cli": "^7.4.4",
     "prisma": "^6.17.1",
