--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "@prisma/client": "^6.17.1",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
+    "otplib": "^13.1.0",
     "resend": "^6.6.0",
     "sharp": "^0.34.5",
     "slugify": "^1.6.6",
