--- a/package.json
+++ b/package.json
@@ -81,8 +81,10 @@
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/websocket": "^11.2.0",
     "@prisma/client": "^6.17.1",
+    "@types/node-cron": "^3.0.11",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
+    "node-cron": "^4.2.1",
     "otplib": "^13.1.0",
     "resend": "^6.6.0",
     "sharp": "^0.34.5",
