Contracts and More

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "db:dev:seed:genetics": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-genetics-test-animals.ts",
     "db:dev:seed:titles": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-title-definitions.ts",
     "db:dev:seed:competitions": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-titles-competitions.ts",
+    "db:dev:seed:contracts": "node scripts/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-contract-templates.ts",
     "db:dev:seed": "npm run db:dev:seed:traits && npm run db:dev:seed:users && npm run db:dev:seed:products",
     "db:dev:reset": "npm run db:dev:deploy && npm run db:dev:seed",
     "test:quota": "node scripts/run-with-env.js .env.dev.migrate npx tsx scripts/test-quota-enforcement.ts",
@@ -45,6 +46,7 @@
     "db:dev:seed:validation": "node scripts/run-with-env.js .env.dev.migrate npx tsx scripts/seed-validation-tenants/seed-dev.ts",
     "db:prod:seed:validation": "node scripts/run-with-env.js .env.prod.migrate npx tsx scripts/seed-validation-tenants/seed-prod.ts",
     "db:prod:seed:traits": "node scripts/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-trait-definitions.ts",
+    "db:prod:seed:contracts": "node scripts/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-contract-templates.ts",
     "db:prod:status": "node scripts/run-with-env.js .env.prod.migrate prisma migrate status --schema=prisma/schema.prisma",
     "db:prod:deploy": "node scripts/run-with-env.js .env.prod.migrate prisma migrate deploy --schema=prisma/schema.prisma",
     "db:prod:validate": "node scripts/run-with-env.js .env.prod.migrate tsx scripts/db/v2/validate-post-import.ts",
@@ -86,6 +88,7 @@
     "fastify": "^5.6.0",
     "node-cron": "^4.2.1",
     "otplib": "^13.1.0",
+    "pdf-lib": "^1.17.1",
     "resend": "^6.6.0",
     "sharp": "^0.34.5",
     "slugify": "^1.6.6",
