--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "db:prod:push": "echo \"🚫 db push is FORBIDDEN - Use: npm run db:prod:deploy\" && exit 1"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.971.0",
+    "@aws-sdk/s3-request-presigner": "^3.971.0",
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^10.1.0",
     "@fastify/helmet": "^13.0.1",
@@ -84,6 +86,7 @@
     "@fastify/websocket": "^11.2.0",
     "@prisma/client": "^6.17.1",
     "@types/node-cron": "^3.0.11",
+    "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
     "fastify": "^5.6.0",
     "node-cron": "^4.2.1",
@@ -93,6 +96,7 @@
     "sharp": "^0.34.5",
     "slugify": "^1.6.6",
     "stripe": "^20.1.2",
+    "uuid": "^13.0.0",
     "zod": "^4.1.8"
   },
   "devDependencies": {
