all the ovulation cycle changes + so much more

--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,14 @@ APP_URL=http://localhost:5173
 # Stripe Billing
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
+
+# ────────────────────────────────────────────────────────────────────────────
+# AWS S3 Storage
+# ────────────────────────────────────────────────────────────────────────────
+# Used for file uploads (animal photos, documents, contracts, etc.)
+# DEV bucket: breederhq-assets-dev
+# PROD bucket: breederhq-assets-prod (when created)
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=us-east-1
+S3_BUCKET=breederhq-assets-dev
