--- a/package.json
+++ b/package.json
@@ -100,6 +100,7 @@
     "zod": "^4.1.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "@types/node": "^24.3.1",
     "@types/ws": "^8.18.1",
     "cross-env": "^10.1.0",
