--- a/.gitignore
+++ b/.gitignore
@@ -37,10 +37,6 @@ nul
 
 # Other files
 *repo-structure*
-CLAUDE.md
-.claudeignore
-.claude/
-.eslintcache
 
 # route tests (excluded)
 src/routes/__tests__/
@@ -70,15 +66,16 @@ cookies.txt
 *-cookies.txt
 
 # Other files
-/.claude
 repo-structure-output.txt
 breederhq-repo-structure.txt
-CLAUDE.md
 .claudeignore
-.claude/
 .eslintcache
 *.nul
 /nul
+
+# Claude Code config - track CLAUDE.md but ignore local settings
+.claude/*
+!.claude/CLAUDE.md
 
 # Claude Code temporary files
 tmpclaude-*-cwd
