tons of marketplace fixes and enhancements

--- a/package.json
+++ b/package.json
@@ -71,6 +71,12 @@
     "script:enable-public-program": "node scripts/admin/enable-public-program.mjs",
     "script:verify-public-programs": "powershell -File scripts/verification/verify-public-programs.ps1",
     "script:verify-routes": "powershell -File scripts/verification/verify-public-marketplace-routes.ps1",
+    "script:remove-quotas:dev": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx scripts/remove-quota-restrictions.ts",
+    "script:remove-quotas:prod": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx scripts/remove-quota-restrictions.ts",
+    "script:check-quotas:dev": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx scripts/check-quota-status.ts",
+    "script:check-quotas:prod": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx scripts/check-quota-status.ts",
+    "script:create-unlimited-plan:dev": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx scripts/create-unlimited-plan.ts",
+    "script:create-unlimited-plan:prod": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx scripts/create-unlimited-plan.ts",
     "postinstall": "prisma generate --schema=prisma/schema.prisma",
     "db:push": "echo \"🚫 db push is FORBIDDEN - Use: npm run db:dev:migrate\" && exit 1",
     "db:dev:push": "echo \"🚫 db push is FORBIDDEN - Use: npm run db:dev:migrate\" && exit 1",
