add elastic beanstalk setup

--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,13 @@ prisma/migrations.bak/
 tmp/route-backups/
 prisma/schema.backup.prisma
 
+cookies.txt
+.env.proto
+*.cookies.txt
+*-cookies.txt
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/config.yml
+!.elasticbeanstalk/*.global.yml
