new supplements feature supports

--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "db:dev:seed:titles": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-title-definitions.ts",
     "db:dev:seed:competitions": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-titles-competitions.ts",
     "db:dev:seed:contracts": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-contract-templates.ts",
+    "db:dev:seed:supplements": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-supplement-benchmarks.ts",
+    "db:dev:seed:microchips": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-microchip-registries.ts",
     "db:dev:seed": "npm run db:dev:seed:traits && npm run db:dev:seed:users && npm run db:dev:seed:products",
     "db:dev:reset": "npm run db:dev:deploy && npm run db:dev:seed",
     "test:quota": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx scripts/api-testing/test-quota-enforcement.ts",
@@ -47,6 +49,8 @@
     "db:prod:seed:validation": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx scripts/seeding/seed-validation-tenants/seed-prod.ts",
     "db:prod:seed:traits": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-trait-definitions.ts",
     "db:prod:seed:contracts": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-contract-templates.ts",
+    "db:prod:seed:supplements": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-supplement-benchmarks.ts",
+    "db:prod:seed:microchips": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-microchip-registries.ts",
     "db:prod:status": "node scripts/development/run-with-env.js .env.prod.migrate prisma migrate status --schema=prisma/schema.prisma",
     "db:prod:deploy": "node scripts/development/run-with-env.js .env.prod.migrate prisma migrate deploy --schema=prisma/schema.prisma",
     "db:prod:validate": "node scripts/development/run-with-env.js .env.prod.migrate tsx scripts/migrations/v2/validate-post-import.ts",
