--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
     "bcryptjs": "^3.0.2",
+    "date-fns": "^4.1.0",
     "fastify": "^5.6.0",
     "node-cron": "^4.2.1",
     "otplib": "^13.1.0",
