--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preflight": "node scripts/development/preflight-env.js",
     "dev": "npx dotenv -e .env.dev -- node scripts/development/preflight-env.js && npx dotenv -e .env.dev -- tsx watch src/server.ts",
     "dev:stripe": "echo \"ℹ️  Starting with Stripe billing enabled (requires STRIPE_SECRET_KEY in .env.dev)\" && npm run dev",
-    "build": "tsc -p .",
+    "build": "node --max-old-space-size=4096 ./node_modules/typescript/lib/tsc.js -p .",
     "start": "node scripts/development/preflight-env.js && node dist/server.js",
     "start:render": "node scripts/development/preflight-env.js && node dist/server.js",
     "test": "npx dotenv -e .env.dev -- tsx tests/run-tests.ts",
@@ -95,7 +95,7 @@
     "@fastify/helmet": "^13.0.1",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/websocket": "^11.2.0",
-    "@prisma/client": "^6.17.1",
+    "@prisma/client": "6.17.1",
     "@simplewebauthn/server": "^13.2.2",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
@@ -118,7 +118,7 @@
     "@types/ws": "^8.18.1",
     "cross-env": "^10.1.0",
     "dotenv-cli": "^7.4.4",
-    "prisma": "^6.17.1",
+    "prisma": "6.17.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.6",
     "typescript": "^5.9.2"
