--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "db:dev:seed:contracts": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-contract-templates.ts",
     "db:dev:seed:supplements": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-supplement-benchmarks.ts",
     "db:dev:seed:microchips": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-microchip-registries.ts",
-    "db:dev:seed": "npm run db:dev:seed:traits && npm run db:dev:seed:users && npm run db:dev:seed:products && npm run db:dev:seed:microchips",
+    "db:dev:seed:rearing": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx prisma/seed/seed-rearing-benchmarks.ts",
+    "db:dev:seed": "npm run db:dev:seed:traits && npm run db:dev:seed:users && npm run db:dev:seed:products && npm run db:dev:seed:microchips && npm run db:dev:seed:rearing",
     "db:dev:reset": "npm run db:dev:deploy && npm run db:dev:seed",
     "test:quota": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx scripts/api-testing/test-quota-enforcement.ts",
     "test:usage": "node scripts/development/run-with-env.js .env.dev.migrate npx tsx scripts/api-testing/test-usage-api.ts",
@@ -51,6 +52,7 @@
     "db:prod:seed:contracts": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-contract-templates.ts",
     "db:prod:seed:supplements": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-supplement-benchmarks.ts",
     "db:prod:seed:microchips": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-microchip-registries.ts",
+    "db:prod:seed:rearing": "node scripts/development/run-with-env.js .env.prod.migrate npx tsx prisma/seed/seed-rearing-benchmarks.ts",
     "db:prod:status": "node scripts/development/run-with-env.js .env.prod.migrate prisma migrate status --schema=prisma/schema.prisma",
     "db:prod:deploy": "node scripts/development/run-with-env.js .env.prod.migrate prisma migrate deploy --schema=prisma/schema.prisma",
     "db:prod:validate": "node scripts/development/run-with-env.js .env.prod.migrate tsx scripts/migrations/v2/validate-post-import.ts",
