--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^10.1.0",
     "@fastify/helmet": "^13.0.1",
+    "@fastify/multipart": "^9.4.0",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/websocket": "^11.2.0",
     "@prisma/client": "6.17.1",
@@ -104,6 +105,8 @@
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "fastify": "^5.6.0",
+    "firebase-admin": "^13.6.1",
+    "jsonwebtoken": "^9.0.3",
     "node-cron": "^4.2.1",
     "otplib": "^13.1.0",
     "pdf-lib": "^1.17.1",
@@ -116,6 +119,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
     "@types/ws": "^8.18.1",
     "cross-env": "^10.1.0",
