updates fixes and enhancements

--- a/.env.prod
+++ b/.env.prod
@@ -11,3 +11,6 @@ DATABASE_URL=postgresql://bhq_app:npg_zi23xLvUqQau@ep-dark-breeze-ael53qjx-poole
 RESEND_API_KEY=re_Cadwni4p_Fxd2nMHFrwMm6jnUmnLSMGT1
 RESEND_FROM_EMAIL=noreply@mail.breederhq.com
 RESEND_FROM_NAME=BreederHQ
+
+# Sentry Error Tracking
+SENTRY_DSN=https://d2656b3a48a64be4635984a333f6372e@o4510856946122752.ingest.us.sentry.io/4510856953266176
