--- a/package.json
+++ b/package.json
@@ -97,8 +97,11 @@
     "@fastify/helmet": "^13.0.1",
     "@fastify/multipart": "^9.4.0",
     "@fastify/rate-limit": "^10.3.0",
+    "@fastify/redis": "^7.2.0",
     "@fastify/websocket": "^11.2.0",
     "@prisma/client": "6.17.1",
+    "@sentry/node": "^8.0.0",
+    "@sentry/profiling-node": "^8.0.0",
     "@simplewebauthn/server": "^13.2.2",
     "@types/node-cron": "^3.0.11",
     "@types/uuid": "^10.0.0",
@@ -106,6 +109,7 @@
     "date-fns": "^4.1.0",
     "fastify": "^5.7.3",
     "firebase-admin": "^13.6.1",
+    "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
     "node-cron": "^4.2.1",
     "otplib": "^13.1.0",
@@ -119,6 +123,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.57.0",
+    "@types/ioredis": "^4.28.10",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.3.1",
     "@types/ws": "^8.18.1",
