cross network genetics searches, major refactoring for Listing Drawer, QR Code Sharing

--- a/.env.example
+++ b/.env.example
@@ -112,3 +112,20 @@ FIREBASE_PRIVATE_KEY=
 # If not set, falls back to in-memory stores (single instance only).
 # REDIS_URL=redis://localhost:6379
 # REDIS_URL=redis://user:password@host:6379
+
+# ────────────────────────────────────────────────────────────────────────────
+# Background Jobs
+# ────────────────────────────────────────────────────────────────────────────
+# Network Search Index rebuild — daily aggregation of traits for privacy-preserving search
+# Cron format: "minute hour day month weekday" (default: 4:00 AM daily)
+# NETWORK_SEARCH_INDEX_CRON="0 4 * * *"
+# Set to "false" to disable the job
+# NETWORK_SEARCH_INDEX_ENABLED=true
+
+# Animal Access Cleanup — hard-deletes OWNER_DELETED records after retention period
+# Cron format: "minute hour day month weekday" (default: 3:00 AM daily)
+# ANIMAL_ACCESS_CLEANUP_CRON="0 3 * * *"
+# Set to "false" to disable the job
+# ANIMAL_ACCESS_CLEANUP_ENABLED=true
+# Days to retain OWNER_DELETED records before permanent deletion (default: 30)
+# ANIMAL_ACCESS_CLEANUP_RETENTION_DAYS=30
